--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,6 @@
-<%- include('includes/head.html') %>
+<%- include('./includes/head.html') %>
 
-<%- include('includes/nav.html') %>
+<%- include('./includes/nav.html') %>
 
 <div id="main">
   <div class="fof">
@@ -8,4 +8,4 @@
   </div>
 </div>
 
-<%- include('includes/end.html') %>
+<%- include('./includes/end.html') %>
