Making Product List Dynamic

--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -18,6 +18,13 @@
           name="productName"
           placeholder="Product Name.."
         />
+        <label for="pImg">Image</label>
+        <input
+          type="text"
+          id="pImg"
+          name="productImage"
+          placeholder="Product Image.."
+        />
 
         <input type="submit" value="Submit" />
       </form>
